--- a/package.json
+++ b/package.json
@@ -56,5 +56,10 @@
     "mocha": "^10.1.0",
     "typescript": "^4.9.3"
   },
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "dependencies": {
+    "vscode-languageclient": "^8.0.2",
+    "vscode-languageserver": "^8.0.2",
+    "vscode-languageserver-textdocument": "^1.0.8"
+  }
 }
